--- a/idash/index.html
+++ b/idash/index.html
@@ -529,7 +529,7 @@ function renderFreeLinks() {
       })
       .catch(() => {
         // Even if ad fails → still open bot
-        window.open("https://t.me/intelligentverificationlinkbot?start=start", "_blank");
+        window.open("https://t.me/intelligentverificationlinkbot/customlink", "_blank");
       });
   });
 
