--- a/idash/index.html
+++ b/idash/index.html
@@ -632,7 +632,7 @@ function renderFreeLinks() {
 <p> Don't be panic 😉 If you are not a premium users you can still copy free link's 🔗. Click one of the two options below, whelter you want to copy free links or premium link's</p>
         <button class="premium-later-btn" onclick="closePremiumModal()">Copy free link (i will buy premium later) </button>
     <button class="premium-ok-btn" onclick="goToPremium()">✅  Premium links (I'm already a premium users)</button>
-<a href="https://chat.whatsapp.com/K3nVeaLeUNL3DczCaPPp8I" target="_blank">
+<a href="https://whatsapp.com/channel/0029VbBukzMC6ZvbuIyY420O/103" target="_blank">
     <button class="whatsapp-ok-btn">✅ Join our whatsapp groups</button>
 </a>
   </div>
