--- a/idash/index.html
+++ b/idash/index.html
@@ -28,7 +28,7 @@
     .page { display: none; max-width: 600px; margin: 0 auto; }
     .page.active { display: block; }
     h2 { color: #00ff99; margin-bottom: 15px; text-align: center; font-weight: 700; }
-    p { line-height: 1.5; max-width: 600px; margin: 0 auto 15px auto; font-size: 1.05rem; }
+    p { line-height: 1.1; max-width: 600px; margin: 0 auto 15px auto; font-size: 1.05rem; }
 
     ul.link-list { list-style: none; padding-left: 0; margin: 10px auto; max-width: 600px; }
     ul.link-list li {
@@ -47,6 +47,12 @@
     .btn {
       background: #00ff99; color: #000;
       padding: 6px 12px; font-weight: 700;
+      border: none; border-radius: 12px; cursor: pointer;
+      font-size: 0.9rem; transition: background 0.3s ease;
+    }
+    .btn2 {
+      background: #00ff99; color: #000;
+      padding: 5px 10px; font-weight: 500;
       border: none; border-radius: 12px; cursor: pointer;
       font-size: 0.9rem; transition: background 0.3s ease;
     }
@@ -209,13 +215,13 @@
   .custom-link-btn {
     max-width: 600px;
     margin: 0 auto 15px auto;
-    margin-top: 20px;
+    margin-top: 10px;
   }
 
   .custom-link-btn a {
     display: block;
     background:#6cef8a;
-    padding: 14px;
+    padding: 10px;
     border-radius: 12px;
     text-align: center;
     font-weight: 700;
@@ -632,7 +638,7 @@ function renderFreeLinks() {
 <p> Don't be panic 😉 If you are not a premium users you can still copy free link's 🔗. Click one of the two options below, whelter you want to copy free links or premium link's</p>
         <button class="premium-later-btn" onclick="closePremiumModal()">Copy free link (i will buy premium later) </button>
     <button class="premium-ok-btn" onclick="goToPremium()">✅  Premium links (I'm already a premium users)</button>
-<a href="https://whatsapp.com/channel/0029VbBukzMC6ZvbuIyY420O/103" target="_blank">
+<a href="https://chat.whatsapp.com/K3nVeaLeUNL3DczCaPPp8I" target="_blank">
     <button class="whatsapp-ok-btn">✅ Join our whatsapp groups</button>
 </a>
   </div>
