--- a/idash/index.html
+++ b/idash/index.html
@@ -185,9 +185,9 @@
   <b>
     Click on the "open" button to test your link before you send it to your clients, 
     and also remember to shorten it in any link shorten website like 
-    <a href="https://play.google.com/store/apps/details?id=app.shorten.urlshorten.url.linkshortener.link.shortener.bitly.oneurl" target="_blank" onclick="openWithAd('https://play.google.com/store/apps/details?id=app.shorten.urlshorten.url.linkshortener.link.shortener.bitly.oneurl')" style="color:pink;">bitly</a> 
+    <a href="https://theurlshortener.me/" target="_blank" onclick="openWithAd('https://theurlshortener.me/')" style="color:pink;">bitly</a> 
     or 
-    <a href="https://play.google.com/store/apps/details?id=app.shorten.urlshorten.url.linkshortener.link.shortener.bitly.oneurl" target="_blank" onclick="openWithAd('https://play.google.com/store/apps/details?id=app.shorten.urlshorten.url.linkshortener.link.shortener.bitly.oneurl')" style="color:pink;">tinyurl</a> 
+    <a href="https://theurlshortener.me/" target="_blank" onclick="openWithAd('https://theurlshortener.me/')" style="color:pink;">tinyurl</a> 
     when you copy the link
   </b>
 </p>
