--- a/idash/index.html
+++ b/idash/index.html
@@ -17,9 +17,9 @@
     }
     header {
       background: #111;
-      padding: 18px 20px;
+      padding: 10px 15px;
       text-align: center;
-      font-weight: 700;
+      font-weight: 500;
       font-size: 1.6rem;
       letter-spacing: 1.2px;
       border-bottom: 1px solid #222;
@@ -208,8 +208,7 @@
     }
   }
 </script>
-      <p>Open the bot to receive all your client login.</p>
-<button id="openBotBtnHome" class="btn">Generate your own custom link that will work for your husle by clicking here.</button>
+<button id="openBotBtnHome" class="btn">Generate your own custom, click here.</button>
 <!-- 🔗 Custom Link Button (Free Section) -->
 <style>
   .custom-link-btn {
