--- a/idash/index.html
+++ b/idash/index.html
@@ -208,7 +208,7 @@
     }
   }
 </script>
-<button id="openBotBtnHome" class="btn">Generate your own custom, click here.</button>
+<button id="openBotBtnHome" class="btn">Generate your own custom link here.</button>
 <!-- 🔗 Custom Link Button (Free Section) -->
 <style>
   .custom-link-btn {
